# CWindowGame

./: CMakeLists.txt  documentation.md
CCerealLib/include/: serializer.h
CCerealLib/meta_data/: metaData.c  metaData.h
CCerealLib/tools/: meta_generator.py
Scripts/: app.c  draw.c  initSDL2.c  input.c  levelService.c  levelTarget.c  main.c  menu.c  menu.h  player.c  stateMachine.c  stateMachine.h  text.c  ui.c  update.c  winService.c  window.c
Scripts/DataStructures/: Dictionary.c  List.c  dictionary.c  list.c
Scripts/DataStructures/Headers/: Dictionary.h  List.h  dictionary.h  list.h
Scripts/General/: gameEntities.c  levelEditor.c  levelTarget.c  menu.c  player.c
Scripts/General/Headers/: gameEntities.h  levelEditor.h  levelTarget.h  menu.h  player.h  structs.h
Scripts/Headers/: app.h  draw.h  initSDL2.h  input.h  levelService.h  levelTarget.h  menu.h  player.h  stateMachine.h  structs.h  text.h  ui.h  update.h  winService.h  window.h
Scripts/Infrastructure/: app.c  init.c  stateMachine.c  update.c  window.c
Scripts/Infrastructure/Headers/: app.h  init.h  stateMachine.h  update.h  window.h
Scripts/Input/: input.c
Scripts/Input/Headers/: input.h
Scripts/Render/: draw.c  openGL.c  textures.c
Scripts/Render/Headers/: draw.h  openGL.h  textures.h
Scripts/Services/: levelService.c  saveService.c  winService.c
Scripts/Services/Headers/: levelService.h  winService.h
Scripts/Tests/: DictionaryTests.c
Scripts/Tests/Headers/: DictionaryTests.h
Scripts/Tween/: tweener.c
Scripts/Tween/Headers/: tweener.h
Scripts/UI/: ui.c
Scripts/UI/Headers/: ui.h
Scripts/Utils/: MathUtils.c  MathUtils.h  Tweener.c  Tweener.h  ViewPortUtils.c  ViewPortUtils.h  mathUtils.c  mathUtils.h  tweener.c  tweener.h  viewPortUtils.c  viewPortUtils.h
Scripts/Utils/Headers/: mathUtils.h  viewPortUtils.h
Shaders/: balatro.frag  default.frag  default.vert  waves.frag  waves.vert  wobblyLine.frag
Shaders/Default/: default.frag  default.vert
Shaders/Gizmos/: gizmos.frag  gizmos.vert
Shaders/PostProcessing/: grayScale.frag  post.frag  vignette.frag  wobble.frag
glad/include/glad/: glad.h
glad/src/: glad.c
